# gitlatexdiff

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README.md  flatten_latex.py  make-diff.py  mkdocs.yml  pyproject.toml
docs/: LICENSE.md
docs/reference/: flatten_latex.md  main.md  make_diff.md
src/gitlatexdiff/: __init__.py  flatten_latex.py  make_diff.py
src/gitlatexdiff_original/: __init__.py  main.py
