

# Copyright 2019,2026 Björn Hendriks
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "gitlatexdiff-original"
version = "0.4.0"
description = "Make diff of two versions of a LaTeX document in a Git repo"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE.md" ]
keywords = [ "git", "latex", "diff", "tool" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
authors = [
    {name = "bjhend", email = "developer@bjhend.de"},
]
maintainers = [
    {name = "bjhend", email = "developer@bjhend.de"},
]

requires-python = ">=3.12"
dependencies = [
    "latex-include",
    "beartype",
    "mkdocs",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "icecream",
]


[project.urls]
Repository = "https://github.com/bjhend/gitlatexdiff-original"
Documentation = "https://gitlatexdiff-original.readthedocs.io"
Issues = "https://github.com/bjhend/gitlatexdiff-original/issues"
Changelog = "https://github.com/bjhend/gitlatexdiff-original/blob/main/CHANGELOG.md"


[project.scripts]
gitlatexdiff-original = "gitlatexdiff_original.main:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

